# temper

./: .env  .env.template  .gitattributes  .gitignore  .vercelignore  Brewfile  CLAUDE.md  Cargo.toml  DEPLOYING.md  Makefile.toml  README.md  RELEASING.md  VISION.md  docker-compose.flip.yml  docker-compose.yml  docs-ia-proposal.md  landing-draft.md  openapi.json  package.json  theory-deformation-draft.md  theory-entry-draft.md  theory-manifold-draft.md  theory-ontology-draft.md  theory-open-questions-draft.md  theory-overview-draft.md  theory-perspectives-draft.md  theory-schema-draft.md  theory-time-draft.md  theory-translation-draft.md  vercel.json
crates/temper-agents/: Cargo.toml
crates/temper-agents/src/: envelope.rs  lib.rs  profile.rs
crates/temper-api/: .env.template  CLAUDE.md  Cargo.toml
crates/temper-api/.sqlx/: query-0326f5f796c695c2d33c1c95af648e00caea228bb5a13446d418dd52bef4eed2.json  query-0331d1dcec3d592ae17062b82e38585a3309049f0ad67ffa8b52fb1e304c194a.json  query-035be80f357295a0429849daec3504231a30c720746fb227740f70ff739ea703.json  query-0408f31a6c222fff673589eac7eea0d2a0780b94617bfa0f607e99fb15bfbdec.json  query-04d31cd5f803d4ca42d15be5339a0f1afe3ee34ab24f791a822727d8b3c1ca44.json  query-05c2061d805a8df91e7fd82a1926ae9cce622d4146ef020593056b7fa255a05e.json  query-08253dd18bbf38287105de6c2ff8f38d718579b32447ae631cdf37d4c629c17c.json  query-0835973ff505fc5e8a6feb031243ba734a2e19968fde512093a3544bcf910044.json  query-08dcc556f3666fc3c133c65e66aff17f1437eacb30162a62595efcd5c3877d1e.json  query-09f71e7d873dc8f6093cfef87700a1dc136001e3a4b2a718e7997b85782ee2eb.json  query-0a950386a870ebbcfec828601588e82bf2e1362f89472bc8d01ebc71e0753eb0.json  query-0aaf23309979bf92d2ec96d9f14353632b515d28aaf347229c6ea7a69071e3fb.json  query-0c78ac0449a737e253a61f1266f41c74539ba99654930c76eec8513da364ea95.json  query-106a1c595a61323d8fdb23f1464e2f8c9ffcf9f7cdfbfb3b829ea43fc5b89f9c.json  query-10a976ebdac92a734eb9866c2abacb6e3beab4c863a5914eee3e0ee9a320f8a4.json  query-11536d4e60e5c11141e356fc48b0aff2a5d2b6b86e371dc4bd127e524b4f65cd.json  query-1206cb93ee9a977b7d05d5b08a7af6f6140187b4a1e4c1f1a931af6f5c877088.json  query-12cd8d2f277e85b2243553a5294a14f332a5ee989088d944da5dbfd7947ac783.json  query-132b750f5cd4bbb98d644184c945955b2b8fb00c150dc33a5a5601daabccfbeb.json  query-14b75e93700bdca81b14f7154c02c62662d0bb12b1ecfd349f5bb52ded73f409.json  query-1511c1a3cae6d265b4842b9ce39b8e49656298fa500e02f3efe97836f9b5b043.json  query-177087d2c3ab8d72831a0d91998f137df5455989f90c5786d530e75c3b77204e.json  query-17c6c73f6abfe5ea408f86cdec57e6e6d82b36211eb92519310019d5b1f64596.json  query-1a4472ea5d6b65206dbd648d6c8ca9c16dc669b2cc75f91e32b4e30543a23129.json  query-1a6fad41e47b6135ffc5925f5163288cb7a18b1a25dc14e8ea2a2d3e56d5e359.json  query-20330f6bd00b8a7192eb49538452a53996061e33a550d274a3cd087400e7279b.json  query-231324af2c0e3dcd9dd9f1e773344785e850d35ba4d64271984485f967a9b118.json  query-24586152417da31befe27d4f15f97564fe237bb5507874d35993e7b6c2f8242d.json  query-26fb1df8784ec395b6378611d81473af0dab2926fa66ef6ce8a5bebbc1cda690.json  query-281496609f4757cdf858ea535eaaf93b52fafbad13f4b969fb08fb442b0ea4d6.json  query-2aaff3fd1e4ba5f7a2d67c9a2563921e5b47dfb32068b83d5c5b62320ad02a7b.json  query-2ca3300687f66f022e2f5ed1e549b637a27e2719c7402763bcc990103349e300.json  query-2cab44bf668596aaffb9cccbcc19d8c6efbb544575cbd956c8adba4b0c45b8e3.json  query-31da9ec3f0f22359684d89ff76d3c0c1d4f651a82c7d8e05a4250dafe27548e2.json  query-3378ad5b93f1957cbda1a6fe3573bcf64153902f6f60e27d04a399e1ca73260d.json  query-369af067b0c063be742ba2acde5019479a3608dbeabba970d909bd1aa5c5dfa2.json  query-369e856bc8384cb8383b5337a7b95a9fd7b614daf2f94342361d5c9eafe11bed.json  query-39370ef5bba3c365ab50472cb4abfaccc13fef445b4b17f2668c3f246cac99e5.json  query-3f2c06e362454928c31f3005c7f1da1246e92b7a5a9c0ab3f2b19efab1ad3170.json  query-40466903a8cacfa61d72241f4dd26b96dca456fa216cd8b09e7a70ee10faec1e.json  (+129 more)
crates/temper-api/examples/: phase6_recompute_hashes.rs
crates/temper-api/src/: CLAUDE.md  config.rs  error.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs
crates/temper-api/tests/: CLAUDE.md  access_grants_test.rs  access_next_test.rs  act_authorship_test.rs  admin_ledger_wire_parity_test.rs  admin_settings_test.rs  auth_test.rs  chunk_dedup_test.rs  cogmap_analytics_handler_test.rs  cogmap_authz_test.rs  cogmap_home_test.rs  cogmap_homed_edge_assert_test.rs  cogmap_shape_handler_test.rs  cogmap_wayfind_test.rs  connection_reach_grant_equivalence_test.rs  context_graph_test.rs  context_next_test.rs  context_orientation_test.rs  context_ref_resolve_test.rs  context_team_owned_resource_visibility_test.rs  context_team_owned_visibility_test.rs  create_guards_next_test.rs  deactivation_test.rs  edge_ingest_test.rs  edge_read_next_test.rs  edges_visible_to_equivalence_test.rs  evidence_handler_test.rs  facet_handler_test.rs  genesis_cogmap_test.rs  goal_edge_projection_test.rs  graph_search_test.rs  graph_subgraph_test.rs  graph_test.rs  health_test.rs  ingest_revision_test.rs  internal_saml_test.rs  invocation_handler_test.rs  l0_kernel_cogmap_test.rs  list_context_ref_test.rs  list_meta_select_test.rs  (+29 more)
crates/temper-cli/: Cargo.toml
crates/temper-cli/skill-content/: CLAUDE.md  cognitive-maps.md  implementation-grounding.md  plan-verification.md  reference.md  session-lifecycle.md  subagent-guidance.md  teams.md
crates/temper-cli/src/: CLAUDE.md  access_gate.rs  backend_select.rs  cli.rs  color.rs  config.rs  discovery.rs  error.rs  extract.rs  format.rs  (+11 more)
crates/temper-client/: Cargo.toml
crates/temper-cloud/: Cargo.toml
crates/temper-core/: CLAUDE.md  Cargo.toml
crates/temper-embed/: Cargo.toml
crates/temper-events/: Cargo.toml
crates/temper-ingest/: Cargo.toml  LINKING.md  build.rs
crates/temper-llm/: Cargo.toml
crates/temper-llm-smoke/: Cargo.toml
crates/temper-mcp/: Cargo.toml  mcp-server.toml
crates/temper-next/: Cargo.toml
crates/temper-principal/: Cargo.toml
crates/temper-services/: Cargo.toml
crates/temper-substrate/: Cargo.toml
crates/temper-workflow/: Cargo.toml
tests/e2e/: Cargo.toml
(+2478 files in other folders)
