[package]
name = "temper-cli"
version = "0.1.0"
edition = "2021"
description = "Developer workflow tool for agent-assisted development"

[[bin]]
name = "temper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anstream = "0.6"
anstyle = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.5"
instant-distance = "0.6"
bincode = "1"
glob = "0.3"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
