[workspace]
resolver = "2"
members = ["crates/*", "tests/e2e"]

[package]
name = "temper-cloud"
version = "0.1.0"
edition = "2021"
description = "Vercel deployment adapter for temper-api"

[[bin]]
name = "axum"
path = "api/axum.rs"

[[bin]]
name = "mcp"
path = "api/mcp.rs"

[[bin]]
name = "internal"
path = "api/internal.rs"

[dependencies]
temper-api = { path = "crates/temper-api" }
temper-services = { path = "crates/temper-services" }
temper-mcp = { path = "crates/temper-mcp" }
vercel_runtime = { version = "2", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
