[package]
name = "temper-api"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP server implementing the temper cloud API"

[[bin]]
name = "temper-api"
path = "src/main.rs"

[[bin]]
name = "emit-openapi"
path = "src/bin/emit-openapi.rs"

[dependencies]
temper-core = { path = "../temper-core", features = ["web-api"] }
temper-services = { path = "../temper-services" }
temper-workflow = { path = "../temper-workflow", features = ["web-api"] }
temper-substrate = { path = "../temper-substrate" }
axum = { version = "0.8", features = ["json", "query"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "uuid", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace", "decompression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
# `vendored` bundles the Swagger UI assets via `utoipa-swagger-ui-vendored` instead
# of having the build script fetch them from GitHub at compile time. Keeps the build
# hermetic — no network dependency on github.com (which sandboxed/proxied CI and web
# sessions cannot reach), so `emit-openapi`, clippy, and the pre-commit hook all build
# offline. The pinned assets track the crate version, same as the download would.
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-axum = "0.2"

[features]
test-db = []
# Pure marker that gates body-persistence tests needing real embeddings at
# runtime (the bge ONNX model). ort itself is linked unconditionally via
# temper-substrate → temper-ingest(embed), so no dep/feature plumbing is needed
# here — this only flags which tests require the model to be present.
test-embed = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "json", "uuid"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
