[package]
name = "temper-cli"
version = "0.2.4"
edition = "2021"
description = "Developer workflow tool for agent-assisted development"

[package.metadata.cargo-machete]
ignored = ["indicatif"]

[[bin]]
name = "temper"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1"
askama = "0.12"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.12"
dirs = "5"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
filetime = "0.2"
indicatif = "0.17"
libc = "0.2"
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shell-words = "1"
temper-client = { path = "../temper-client" }
temper-core = { path = "../temper-core" }
temper-workflow = { path = "../temper-workflow" }
temper-ingest = { path = "../temper-ingest" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toon-format = "0.5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
temp-env = "0.3"

[features]
default = ["embed", "extract"]
embed = ["temper-ingest/embed-download"]
extract = ["temper-ingest/extract"]
test-db = []
test-embed = ["embed", "temper-ingest/test-embed"]
