[package]
name = "temper-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, traits, and models for the temper knowledge base system"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "json", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }
rmp-serde = "1"
base64 = "0.22"
dirs = "5"
hex = "0.4"
uuid = { version = "1", features = ["v7", "serde"] }
ts-rs = { version = "10", optional = true, features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }
utoipa = { version = "5", optional = true, features = ["uuid"] }
schemars = { version = "1", optional = true, features = ["uuid1", "chrono04"] }

[features]
web-api = ["utoipa"]
typescript = ["ts-rs"]
mcp = ["schemars"]
