[package]
name = "temper-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, traits, and models for the temper knowledge base system"

[package.metadata.cargo-machete]
ignored = ["async-trait", "tokio"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
jsonschema = "0.45"
rmp-serde = "1"
schemars = { version = "1", features = ["chrono04", "uuid1"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = [
  "chrono",
  "json",
  "macros",
  "postgres",
  "runtime-tokio-rustls",
  "uuid"
] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
ts-rs = { version = "10", features = [
  "chrono-impl",
  "serde-json-impl",
  "uuid-impl"
], optional = true }
utoipa = { version = "5", features = ["uuid"], optional = true }
uuid = { version = "1", features = ["serde", "v7"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
mcp = ["schemars"]
test-db = []
typescript = ["ts-rs"]
web-api = ["utoipa", "utoipa/chrono"]
