[package]
name = "temper-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, traits, and models for the temper knowledge base system"

[package.metadata.cargo-machete]
ignored = ["async-trait", "tokio"]

[dependencies]
temper-principal = { path = "../temper-principal" }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
hmac = "0.12"
rmp-serde = "1"
schemars = { version = "1", features = ["chrono04", "uuid1"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = [
  "chrono",
  "json",
  "macros",
  "postgres",
  "runtime-tokio-rustls",
  "uuid"
] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
ts-rs = { version = "10", features = [
  "chrono-impl",
  "serde-json-impl",
  "uuid-impl"
], optional = true }
utoipa = { version = "5", features = ["uuid"], optional = true }
uuid = { version = "1", features = ["serde", "v7"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
mcp = ["schemars"]
scenario-schema = ["schemars"]
test-db = []
# Both forward to temper-principal so `Refusal` — which rides the admission 403 inside
# `SystemAccessDetails` — is described by whichever generator this boundary turned on. Without the
# forward the field would silently fall back to an opaque `unknown`/free-form object, which is the
# exact drift these features exist to prevent.
typescript = ["ts-rs", "temper-principal/typescript"]
web-api = ["utoipa", "utoipa/chrono", "temper-principal/web-api"]
