[package]
name = "temper-embed"
version = "0.1.0"
edition = "2021"
description = "Embedding and extraction pipeline for temper knowledge base"

[dependencies]
temper-core = { path = "../temper-core" }
thiserror = "2"
kreuzberg = { version = "4.6.3", optional = true, features = ["tokio-runtime"] }

[features]
default = ["extract"]
extract = ["dep:kreuzberg"]

[dev-dependencies]
tempfile = "3"

[package.metadata.cargo-machete]
ignored = ["temper-core"]
