[package]
name = "temper-embed"
version = "0.1.0"
edition = "2021"
description = "Embedding and extraction pipeline for temper knowledge base"

[dependencies]
temper-core = { path = "../temper-core" }
thiserror = "2"
kreuzberg = { version = "4.6.3", optional = true, features = ["tokio-runtime"] }
ort = { version = "2.0.0-rc.12", optional = true }
hf-hub = { version = "0.5", optional = true }
tokenizers = { version = "0.22", optional = true }
ndarray = { version = "0.17", optional = true }

[features]
default = ["extract", "embed"]
extract = ["dep:kreuzberg"]
embed = ["dep:ort", "dep:hf-hub", "dep:tokenizers", "dep:ndarray"]
test-embed = ["embed"]

[dev-dependencies]
tempfile = "3"

[package.metadata.cargo-machete]
ignored = ["temper-core"]
