[package]
name = "temper-events"
version = "0.1.0"
edition = "2021"
description = "Event-sourced substrate foundations: append-only ledger, scoped events, concept projection"

[package.metadata.cargo-machete]
ignored = ["chrono", "serde", "serde_json", "thiserror", "tokio", "uuid"]

[features]
default = []
test-db = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "chrono",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
