[package]
name = "temper-ingest"
version = "0.1.0"
edition = "2021"
description = "Embedding and extraction pipeline for temper knowledge base"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hf-hub = { version = "0.4", optional = true }
html-to-markdown-rs = "3.1.0"
kreuzberg = { version = "4.6.3", features = ["tokio-runtime"], optional = true }
ndarray = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = [
  "api-18",
  "load-dynamic",
  "ndarray",
  "std",
  "tracing"
], optional = true }
regex = "1"
sha2 = "0.10"
similar = "2"
temper-core = { path = "../temper-core" }
thiserror = "2"
tokenizers = { version = "0.22", optional = true }

# Performance-core detection (`cpu.rs`) reads `hw.perflevel0.logicalcpu`. macOS-only:
# no other platform has a measured big-little story yet, so no other platform needs libc.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
# `getrusage` for the embed_bench example's peak-RSS number. Unconditional here (unlike the
# macOS-only runtime dep above) because dev-deps must resolve on every platform the examples are
# compiled on — clippy --all-targets builds them in CI.
libc = "0.2"
serde_json = "1"
# Scoped env mutation for the TEMPER_ONNX_MODEL_PATH tests — the test binary is multi-threaded and
# process env is global, so a bare set_var/remove_var races every other test that reads env.
temp-env = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

# Cross-model embedding benchmark: per-chunk cost, peak RSS, and the vector-equivalence gate for
# the quantized-model rollout. Needs the embedding stack, so it must not be compiled into a build
# that gates `embed` out.
[[example]]
name = "embed_bench"
required-features = ["embed"]

[features]
default = ["embed", "extract"]
embed = ["dep:ndarray", "dep:ort", "dep:tokenizers"]
embed-download = ["dep:hf-hub", "dep:ndarray", "dep:ort", "dep:tokenizers"]
extract = ["dep:kreuzberg"]
test-embed = ["embed"]
