[package]
name = "temper-ingest"
version = "0.1.0"
edition = "2021"
description = "Embedding and extraction pipeline for temper knowledge base"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
html-to-markdown-rs = "3.1.0"
kreuzberg = { version = "4.6.3", features = ["tokio-runtime", "bundled-pdfium"], optional = true }
ndarray = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = [
  "api-18",
  "load-dynamic",
  "ndarray",
  "std",
  "tracing"
], optional = true }
regex = "1"
sha2 = "0.10"
similar = "2"
temper-core = { path = "../temper-core" }
thiserror = "2"
tokenizers = { version = "0.22", optional = true }
# Per-phase cold-load timing on the embed path (issue #451). Events are no-ops without a
# subscriber (the CLI installs none), so this stays silent there and surfaces as JSON only on
# the server, whose subscriber is configured in the Vercel function entrypoints.
tracing = "0.1"

# Performance-core detection (`cpu.rs`) reads `hw.perflevel0.logicalcpu`. macOS-only:
# no other platform has a measured big-little story yet, so no other platform needs libc.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[build-dependencies]
# Derives the expected model sha256 at compile time (see build.rs) — from the LFS pointer when the
# blob is not smudged, from the file itself when it is. Same hash either way.
sha2 = "0.10"

[dev-dependencies]
# `getrusage` for the embed_bench example's peak-RSS number. Unconditional here (unlike the
# macOS-only runtime dep above) because dev-deps must resolve on every platform the examples are
# compiled on — clippy --all-targets builds them in CI.
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Scoped env mutation for the TEMPER_ONNX_MODEL_PATH tests — the test binary is multi-threaded and
# process env is global, so a bare set_var/remove_var races every other test that reads env.
temp-env = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
# Cold-load probe (examples/coldload_probe.rs) installs a subscriber so the per-phase embed
# markers print; only the example needs it, hence dev-dep.
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

# Cross-model embedding benchmark: per-chunk cost, peak RSS, and the vector-equivalence gate for
# the quantized-model rollout. Needs the embedding stack, so it must not be compiled into a build
# that gates `embed` out.
[[example]]
name = "embed_bench"
required-features = ["embed"]

[features]
default = ["embed", "extract"]
embed = ["dep:ndarray", "dep:ort", "dep:tokenizers"]
# Resolve the model from disk at runtime (next to the binary) instead of baking it in. The name is
# historical: it no longer downloads anything. Keeps the CLI binary ~18 MB instead of ~128 MB.
embed-download = ["dep:ndarray", "dep:ort", "dep:tokenizers"]
extract = ["dep:kreuzberg"]
test-embed = ["embed"]

# Provenance recovery: which model produced each stored embedding? Reads a sampled chunk export and
# re-embeds it to classify. Needs the embedding stack.
[[example]]
name = "classify_chunks"
required-features = ["embed"]

# Cold-load probe for issue #451: reproduces the `/api/embed/warm` cold path (model load + first
# inference) so the per-phase timing can be read under a throttled CPU (see bench/). Built as the
# `embed-download` variant because the local bed runs arm64, where the bundled x86_64 runtime
# cannot load — the session-build/inference code it exercises is identical to the server's.
[[example]]
name = "coldload_probe"
required-features = ["embed-download"]
