[package]
name = "temper-llm-smoke"
version = "0.1.0"
edition = "2021"
description = "Smoke-test binary for temper-llm providers"
publish = false

[package.metadata.cargo-machete]
ignored = ["tracing"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
schemars = "1"
serde_json = "1"
temper-llm = { path = "../temper-llm" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
