[package]
name = "temper-llm"
version = "0.1.0"
edition = "2021"
description = "LLM provider abstraction and agent harness for temper"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = ["tokio"]