[package]
name = "temper-llm"
version = "0.1.0"
edition = "2021"
description = "LLM provider abstraction and agent harness for temper"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
temp-env = "0.3"
