[package]
name = "temper-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for agent access to the temper knowledge base"

[dependencies]
temper-api = { path = "../temper-api" }
temper-core = { path = "../temper-core", features = ["web-api", "mcp"] }

rmcp = { version = "1.3", features = [
    "server",
    "transport-streamable-http-server",
] }

axum = { version = "0.8", features = ["json", "query"] }
http = "1"
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["uuid1"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
