[package]
name = "temper-next"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# Gates the integration tests that need the `temper_next` artifact LOADED (schema-artifact/*.sql, a
# separate PG namespace) + a DB + ONNX (bge-768). No CI job enables this — those tests run locally /
# via schema-artifact/run_eval.sh, after loading the artifact. The pure core tests (affinity, cluster)
# are ungated and run in CI. Local: `cargo nextest run -p temper-next --features artifact-tests`.
artifact-tests = []
# Emit + snapshot-test the scenario JSON Schema from the loader structs (schemars derives).
scenario-schema = ["schemars"]

[dependencies]
temper-ingest = { path = "../temper-ingest", features = ["embed"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["uuid1"], optional = true }
anyhow = "1"
