[package]
name = "temper-next"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# Gates the SCENARIO write-path integration tests (bootseed/scenario_load/scenario_roundtrip). Each
# OWNS the `temper_next` namespace — resets it to a clean 01+02 then seeds — so they're serialized via
# the `temper-next-write` nextest group. Needs a DB + ONNX (bge-768). No CI job enables this; run
# locally: `cargo nextest run -p temper-next --features artifact-tests`. Pure core tests (affinity,
# cluster) are ungated and run in CI.
artifact-tests = []
# Gates the LEGACY read-path tests (materialize/substrate_read/embed_job) — they instead need
# `03_seed.sql` loaded and do NOT reset, so they MUST NOT co-run with the self-resetting write-path
# tests (a reset would DROP SCHEMA out from under them). Kept on a separate feature so a single
# `--features` run can never include both. M2 retires this path. Run after loading 01+02+03_seed.
artifact-tests-legacy = []
# Emit + snapshot-test the scenario JSON Schema from the loader structs (schemars derives).
scenario-schema = ["schemars"]

[dependencies]
temper-ingest = { path = "../temper-ingest", features = ["embed"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros", "migrate"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["uuid1"], optional = true }
anyhow = "1"
sha2 = "0.10"
