[package]
name = "temper-next"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# Gates the SCENARIO write-path integration tests (bootseed/scenario_load/scenario_roundtrip). Each
# OWNS the `temper_next` namespace — resets it to a clean 01+02 then seeds — so they're serialized via
# the `temper-next-write` nextest group. Needs a DB + ONNX (bge-768). No CI job enables this; run
# locally: `cargo nextest run -p temper-next --features artifact-tests`. Pure core tests (affinity,
# cluster) are ungated and run in CI.
artifact-tests = []
# Gates the LEGACY read-path tests (materialize/substrate_read/embed_job) — they instead need
# `03_seed.sql` loaded and do NOT reset, so they MUST NOT co-run with the self-resetting write-path
# tests (a reset would DROP SCHEMA out from under them). Kept on a separate feature so a single
# `--features` run can never include both. M2 retires this path. Run after loading 01+02+03_seed.
artifact-tests-legacy = []
# Emit + snapshot-test the scenario JSON Schema from the loader structs (schemars derives).
scenario-schema = ["schemars"]
# WS6 4b: enable temper-api's NextBackend (a dev-dep feature) so the parity harness can drive a read
# through the temper-api wiring layer, not just `readback::*` directly. Test-only — temper-api is a
# dev-dependency, so this never enters the lib build graph.
next-backend = ["temper-api/next-backend"]

[dependencies]
temper-ingest = { path = "../temper-ingest", features = ["embed"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros", "migrate"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["uuid1"], optional = true }
anyhow = "1"
sha2 = "0.10"

[dev-dependencies]
# WS6 chunk-3 parity reads compare `readback::*` against the ACTUAL production read paths, so the
# parity tests call into temper-api's services (e.g. `resource_service::list_visible`) and construct
# their param/response types from temper-core. Dev-only: `cargo sqlx prepare` skips test targets, so
# this never enters temper-next's lib build graph (prepare-next stays clean) — it links only when the
# integration-test binaries compile.
temper-api = { path = "../temper-api" }
temper-core = { path = "../temper-core" }
